<resources>
    <string name="app_name">TwinkleBun</string>
    <string name="Web_id">184137877238-nfkv0cgej5g7i8gkub0dhrj1dj8ijvvd.apps.googleusercontent.com</string>
    <string name="not_yet_registered_signup_now">Not yet registered? SignUp Now</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="login2">Login</string>
    <string name="username">Username</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="title_activity_home">Home</string>
    <string name="title_home">Home</string>
    <string name="title_badge">Badges</string>
    <string name="title_Leadership">Leadership Board</string>

    <string name="web_client_id">388392240008-ik0qq9o40bonm0amqdgd8q25brlmt8ff.apps.googleusercontent.com</string>
    <string name="create_account">Create Account</string>
    <string name="name">Name</string>
    <string name="todo">TODO</string>
    <string name="attempts">Attempts</string>
    <string name="score">Score</string>
    <string name="_0">0</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>

    <string name="scholarship_past_papers">Scholarship Past Papers</string>
    <string name="next_question">Next Question</string>
    <string name="score_0_0">Score: 0/0</string>
    <string name="select_the_year">Select the Year</string>
    <string name="_2020">2020</string>
    <string name="_2021">2021</string>
    <string name="_2022">2022</string>
    <string name="your_score">Your Score</string>

</resources>