<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.legocats.twinklebun.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.legocats.twinklebun.ui.badges.BadgesFragment"
        android:label="@string/title_badge"
        tools:layout="@layout/fragment_badges" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.legocats.twinklebun.ui.leadership.LeadershipFragment"
        android:label="@string/title_Leadership"
        tools:layout="@layout/fragment_leadership" />
</navigation>